--- a/index.css
+++ b/index.css
@@ -1,3 +1,46 @@
-#heading{
-    color: red;
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo{
+    width: 100px;
+}
+
+.nav-items > ul {
+    display: flex;
+    list-style-type: none;
+    font-size: 24px;
+}
+
+.nav-items > ul > li{
+    padding:  0px 10px;
+    margin: 10px;
+}
+
+.res-card{
+    padding: 5px;
+    width: 200px;
+    height: 300px;
+     margin: 5px;
+}
+
+.res-card:hover{
+    cursor: pointer;
+    border: 1px solid black;
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.search{
+    padding: 10px;
+}
+
+.res-logo{
+    width: 100%;
+    height: 40%;
 }
