--- a/index.css
+++ b/index.css
@@ -9,6 +9,10 @@
     width: 100px;
 }
 
+.nav-items {
+    padding:  0px 20px;
+}
+
 .nav-items > ul {
     display: flex;
     list-style-type: none;
@@ -20,11 +24,10 @@
     margin: 10px;
 }
 
-.res-card{
+.res-card {
+    margin: 5px;
     padding: 5px;
     width: 200px;
-    height: 400px;
-    margin: 5px;
 }
 
 .res-card:hover{
@@ -33,8 +36,9 @@
 }
 
 .res-container{
-    flex-wrap: wrap;
     display: flex;
+    flex-wrap: wrap;
+    
 }
 .search{
     padding: 10px;
@@ -42,5 +46,10 @@
 
 .res-logo{
     width: 100%;
-    height: 40%;
+    
+}
+
+.filter-btn{
+    margin: 10px;
+    cursor: pointer;
 }
